gitops/apps/paperless-ngx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
